package fathomcloud.protobuf;

option java_package="io.fathom.cloud.protobuf";

import "CloudCommons.proto";

message SecretRecordItemData {
	optional string key = 1;
	
	optional bytes ciphertext = 2;
}

message SecretRecordData {
	optional int64 id = 1;
	
	repeated SecretRecordItemData item = 2;
	
	optional string name = 3;
	optional string algorithm = 4;
	optional int32 key_size = 5;
	optional string subject = 6;
}

